# cutauto

./: Dockerfile  README.md  README.zh.md  config.py  docker-compose.yaml  exceptions.py  main.py  pyproject.toml
.github/workflows/: docker-image.yml
src/middlewares/: response.py
src/pyJianYingDraft/: draft_folder.py  jianying_controller.py  script_file.py  template_mode.py
src/router/: v1.py
src/schemas/: __init__.py  create_draft.py  template_688001.py
src/service/: __init__.py  create_draft.py  template_base.py  template_processor_688001.py
src/utils/: __init__.py  draft_cache.py  helper.py
tpls/: readme.md
tpls/688001/: draft.extra  draft_agency_config.json  draft_agency_info.json  draft_content.json  draft_content.json.bak  draft_meta_info.json  draft_settings  draft_virtual_store.json  template.json.bak
