[project]
name = "cutauto"
version = "1.0.0"
description = "CutAuto API Service"
authors = [
    { name = "Hommy", email = "taohongmin51@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.100.0",
    "pymediainfo>=7.0.1",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
]